==============
lxml changelog
==============

Under development
=================

Features added
--------------

* New options for exclusive C14N and C14N without comments.

* Instantiating a custom Element classes creates a new Element.

Bugs fixed
----------

Other changes
-------------


2.1.1 (2008-07-24)
==================

Features added
--------------

Bugs fixed
----------

* Crash when parsing XSLT stylesheets in a thread and using them in
  another.

* Encoding problem when including text with ElementInclude under
  Python 3.

Other changes
-------------


2.0.8 (2008-07-24)
==================

Features added
--------------

* ``lxml.html.rewrite_links()`` strips links to work around documents
  with whitespace in URL attributes.

Bugs fixed
----------

* Crash when parsing XSLT stylesheets in a thread and using them in
  another.

* CSS selector parser dropped remaining expression after a function
  with parameters.

Other changes
-------------


2.1 (2008-07-09)
================

Features added
--------------

* Smart strings can be switched off in XPath (``smart_strings``
  keyword option).

* ``lxml.html.rewrite_links()`` strips links to work around documents
  with whitespace in URL attributes.

Bugs fixed
----------

* Custom resolvers were not used for XMLSchema includes/imports and
  XInclude processing.

* CSS selector parser dropped remaining expression after a function
  with parameters.

Other changes
-------------

* ``objectify.enableRecursiveStr()`` was removed, use
  ``objectify.enable_recursive_str()`` instead

* Speed-up when running XSLTs on documents from other threads


2.0.7 (2008-06-20)
==================

Features added
--------------

* Pickling ``ElementTree`` objects in lxml.objectify.

Bugs fixed
----------

* Descending dot-separated classes in CSS selectors were not resolved
  correctly.

* ``ElementTree.parse()`` didn't handle target parser result.

* Potential threading problem in XInclude.
