@@ -1381,16 +1381,19 @@ cdef _getFilenameForFile(source):
     Returns None if not a file object.
     """
     # file instances have a name attribute
-    filename = getattr3(source, u'name', None)
-    if filename is not None:
-        return filename
-    # gzip file instances have a filename attribute
-    filename = getattr3(source, u'filename', None)
-    if filename is not None:
-        return filename
+    if isinstance(source, file):
+        return os_path_abspath(source.name)
     # urllib2 provides a geturl() method
     geturl = getattr3(source, u'geturl', None)
     if geturl is not None:
         return geturl()
+    # gzip file instances have a filename attribute
+    filename = getattr3(source, u'filename', None)
+    if filename is not None:
+        return os_path_abspath(filename)
+    # this is mostly for backwards compatibility
+    filename = getattr3(source, u'name', None)
+    if filename is not None:
+        return os_path_abspath(filename)
     # can't determine filename
     return None
